--- a/p8105_hw3_yz4186.Rmd
+++ b/p8105_hw3_yz4186.Rmd
@@ -2,7 +2,7 @@
 title: "p8105_hw3_yz4186"
 author: "Yunxi Zhang"
 date: "10/18/2021"
-output: github_document
+output: pdf_document
 ---
 
 #Homework 3
@@ -22,7 +22,7 @@ data("instacart")
 ```{r}
 instacart ## take a look at the data
 ```
-The "instacart" dataset has `r nrow(instacart)` rows and `r ncol(instacart)` columns. It contains data of each oder with showing the "product id", "user id" and "product name" and other detailder information. 
+The "instacart" dataset has `r nrow(instacart)` rows and `r ncol(instacart)` columns. It contains data of each order with showing the "product id", "user id" and "product name" and other detailder information. 
 
 #### b) How many aisles are there, and which aisles are the most items ordered from?
 
@@ -71,7 +71,7 @@ instacart %>%
   knitr::kable() 
 ```
 
-### e) Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+#### e) Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
 
 ```{r}
  instacart %>% 
@@ -96,7 +96,7 @@ library("p8105.datasets")
 data("brfss_smart2010")
 ```
 
-#### First, do some data cleaning:
+#### a) First, do some data cleaning:
 #### format the data to use appropriate variable names;focus on the “Overall Health” topic include only responses from “Excellent” to “Poor” organize; responses as a factor taking levels ordered from “Poor” to “Excellent”;   
 
 ```{r}
@@ -114,7 +114,7 @@ brfss_df =
   )
 ```
 
-#### Using this dataset, do or answer the following (commenting on the results of each):
+#### b) Using this dataset, do or answer the following (commenting on the results of each):
 ##### In 2002, which states were observed at 7 or more locations? What about in 2010?
 
 ```{r}
@@ -138,7 +138,7 @@ brfss_df %>%
 ```
 Therefore, "CT", "FL", "MA", "MC", "NJ" and "PA" have at 7 or more locations.
 
-#### Construct a dataset that is limited to Excellent responses, and contains, year, state, and a variable that averages the data_value across locations within a state. Make a “spaghetti” plot of this average value over time within a state (that is, make a plot showing a line for each state across years – the geom_line geometry and group aesthetic will help).
+#### c) Construct a dataset that is limited to Excellent responses, and contains, year, state, and a variable that averages the data_value across locations within a state. Make a “spaghetti” plot of this average value over time within a state (that is, make a plot showing a line for each state across years – the geom_line geometry and group aesthetic will help).
  
 ```{r}
 Excellent_df = 
@@ -162,7 +162,7 @@ ggplot(aes(x = year, y = average, color = locationabbr)) +
   ) 
 ```
 
-Make a two-panel plot showing, for the years 2006, and 2010, distribution of data_value for responses (“Poor” to “Excellent”) among locations in NY State.
+#### d) Make a two-panel plot showing, for the years 2006, and 2010, distribution of data_value for responses (“Poor” to “Excellent”) among locations in NY State.
 
 ```{r}
 brfss_df %>% 
@@ -178,9 +178,10 @@ brfss_df %>%
     y = "Density of data value") 
 ```
 
+
 ### Problem 3 
 
-#### Load, tidy, and otherwise wrangle the data. Your final dataset should include all originally observed variables and values; have useful variable names; include a weekday vs weekend variable; and encode data with reasonable variable classes. Describe the resulting dataset (e.g. what variables exist, how many observations, etc).
+#### a) Load, tidy, and otherwise wrangle the data. Your final dataset should include all originally observed variables and values; have useful variable names; include a weekday vs weekend variable; and encode data with reasonable variable classes. Describe the resulting dataset (e.g. what variables exist, how many observations, etc).
 
 ```{r}
 ## load the data
@@ -188,32 +189,73 @@ accel_df = read_csv("./data/accel_data.csv")
 
 ## tidy the data
 ## change the data to human_read 
-accel_clean = accel_df %>% 
+accel_weekday =
+  accel_df %>% 
   pivot_longer(   
     activity.1 : activity.1440,
     names_to = "minute",
     names_prefix = "activity.",
     values_to = "activity_counts"
-  ) %>% 
+  ) %>%
+  
+## generate weekday vs weekend variable
 mutate( 
       weekday = 
-      case_when(day %in% c("Monday","Tuesday","Wednesday","Thursday","Friday") ~ "weekday", ## generate weekday vs weekend variable
-      day %in% c("Saturday","Sunday") ~ "weekend")
+         case_when( day %in%    
+  c("Monday","Tuesday","Wednesday","Thursday","Friday") ~ "weekday",    day %in% c("Saturday","Sunday") ~ "weekend")
+  ) %>% 
+  
+## reorder the day, weekday and minute variable
+mutate(
+    day = as.factor(day),
+    day = fct_relevel(day, 
+      "Monday", "Tuesday", "Wednesday", "Thursday", "Friday" , "Saturday", "Sunday"),
+    weekday = as.factor(weekday),
+    minute = as.numeric(minute)
+    )
+
+accel_weekday
+```
+The dataset has `r nrow(accel_weekday)` rows and `r ncol(accel_weekday)` columns with the variables:`r names(accel_weekday)` . 
+
+
+#### b) Traditional analyses of accelerometer data focus on the total activity over the day. Using your tidied dataset, aggregate accross minutes to create a total activity variable for each day, and create a table showing these totals. Are any trends apparent?
+
+```{r}
+accel_eachday = 
+accel_weekday %>% 
+ group_by(week, day) %>%
+  summarize(total_activity = sum(activity_counts)) %>% 
+  pivot_wider(
+    names_from = day,
+    values_from = total_activity
+  ) %>% 
+  relocate(c("week", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday" , "Saturday", "Sunday")) %>% 
+  knitr::kable()
+
+ accel_eachday
+```
+From the above kabble, I find that the total activity is lower on weekend than weekday.
+
+#### c) Accelerometer data allows the inspection activity over the course of the day. Make a single-panel plot that shows the 24-hour activity time courses for each day and use color to indicate day of the week. Describe in words any patterns or conclusions you can make based on this graph.
+
+```{r}
+accel_weekday %>% 
+  ggplot(aes(x = minute, y = activity_counts, color = day, group = day_id)) +
+  geom_line(alpha = 0.6) + 
+  labs(
+    title = "24-Hour activity of the day",
+    x = "Time",
+    y = "Activity Count"
+  ) +
+## need to scale the x-axis
+  scale_x_continuous(
+    breaks = c(0, 360, 720, 1080, 1440), 
+    labels = c("12a.m.", "6a.m.", "12p.m.", "6p.m.", "11:59p.m."),
+    limits = c(0, 1440)
   ) 
 ```
-
-#### Traditional analyses of accelerometer data focus on the total activity over the day. Using your tidied dataset, aggregate accross minutes to create a total activity variable for each day, and create a table showing these totals. Are any trends apparent?
-
-```{r}
-
-```
-
-#### Accelerometer data allows the inspection activity over the course of the day. Make a single-panel plot that shows the 24-hour activity time courses for each day and use color to indicate day of the week. Describe in words any patterns or conclusions you can make based on this graph.
-
-```{r}
-
-```
-
+From the plot I find that the most activities in each day occur at 12 pm and 11:59 pm. 
 
 
 
