--- a/p8105_hw3_yz4186.Rmd
+++ b/p8105_hw3_yz4186.Rmd
@@ -2,7 +2,9 @@
 title: "p8105_hw3_yz4186"
 author: "Yunxi Zhang"
 date: "10/18/2021"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 #Homework 3
